# make-appointment

./: check_appointments.sh  pyproject.toml
make_appointment/: __init__.py
make_appointment/page_objects/: __init__.py  landesamt_einwanderung.py
make_appointment/utils/: loadable_page.py
tests/: test_make_appointment.py
