[tool.poetry]
name = "make-appointment"
version = "0.1.0"
description = ""
authors = ["Gonzalo GarciÌa <gonzalogarcia243@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
click = "^8.1.3"
tendo = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
